--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,11 @@
 <div>
-    <h1>Here is a Title</h1>
+    <h1>Project Title</h1>
 </div>
+
+  <p>
+    <form style ="display: inline-block" action="/login" method="POST" style="margin:150px;">
+      <input id="username" type="text" name="username" placeholder="Username" style="width: 300px">
+      <input type="submit" value="Submit Username">
+    </form>
+  </p>
+
